# D3D12HelloTriangle

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  shader.fx
src/Core/: Core.cpp  Core.h
